Fixed min-width element in body css that clipped the site on a mobile viewport

--- a/compsoc/static/compsoc/css/override-geocities.css
+++ b/compsoc/static/compsoc/css/override-geocities.css
@@ -56,7 +56,6 @@ body {
     font-family: consolas,monospace;
     font-size: 14px;
     color: #000;
-    min-width: 420px;
 }
 
 /* HEADER STYLE  --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   */
