--- a/compsoc/static/compsoc/css/override-ninja.css
+++ b/compsoc/static/compsoc/css/override-ninja.css
@@ -57,7 +57,6 @@ body {
     font-family: Arial,"MS Sans Serif","Geneva",sans-serif;
     font-size: 14px;
     color: #333;
-    min-width: 420px;
 }
 
 /* HEADER STYLE  --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   */
