--- a/compsoc/static/compsoc/css/override.css
+++ b/compsoc/static/compsoc/css/override.css
@@ -56,7 +56,6 @@ body {
     font-family: Arial,"MS Sans Serif","Geneva",sans-serif;
     font-size: 14px;
     color: #585856;
-    min-width: 420px;
 }
 
 /* HEADER STYLE  --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   --   */
